--- a/Project_SnakeAndLadder/Project_SnakeAndLadder.csproj
+++ b/Project_SnakeAndLadder/Project_SnakeAndLadder.csproj
@@ -142,6 +142,9 @@
   <ItemGroup>
     <None Include="Resources\vs_playerButton-beforeClicked.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\space.bmp" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
