--- a/Project_SnakeAndLadder/Project_SnakeAndLadder.csproj
+++ b/Project_SnakeAndLadder/Project_SnakeAndLadder.csproj
@@ -62,6 +62,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RulesSelectionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RulesSelectionForm.Designer.cs">
+      <DependentUpon>RulesSelectionForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -78,6 +84,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RulesSelectionForm.resx">
+      <DependentUpon>RulesSelectionForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
