--- a/Project_SnakeAndLadder/Project_SnakeAndLadder.csproj
+++ b/Project_SnakeAndLadder/Project_SnakeAndLadder.csproj
@@ -160,6 +160,9 @@
   <ItemGroup>
     <None Include="Resources\dice-06.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\menuTitle_UlarTangga.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
